bynkc/tests/fixtures/positive/194_hof_named_fn_value/input.bynk
commons arith

fn double(x: Int) -> Int {
  x * 2
}

fn apply(f: Int -> Int, x: Int) -> Int {
  f(x)
}

fn quadruple(x: Int) -> Int {
  apply(double, apply(double, x))
}
