bynkc/tests/fixtures/negative/157_unannotated_lambda_param/input.bynk
commons bad

fn misuse() -> Int {
  let f = (x) => x
  5
}
